--- a/static/styles.css
+++ b/static/styles.css
@@ -710,18 +710,11 @@ button:hover {
     z-index: 10001;
 }
 
+/* Removed styles for close-btn to hide the x button */
 .close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 24px;
-    cursor: pointer;
-    color: #333;
+    display: none !important;
 }
 
-.close-btn:hover {
-    color: black;
-}
 .temple-gallery {
     position: relative;
 }
